--- a/custom_nginx/nginx.conf
+++ b/custom_nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
 
         # Location for PHP processing
         location ~ \.php$ {
-            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass ${ALLOWED_IP}:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
@@ -41,7 +41,7 @@ http {
         location /nginx_status {
             stub_status on;
             access_log off;
-            allow 127.0.0.1;  # Allow access only from localhost
+            allow ${ALLOWED_IP};  # Allow access only from localhost
             deny all;          # Deny from all other IPs
         }
     }
