changing default path

--- a/custom_nginx/nginx.conf
+++ b/custom_nginx/nginx.conf
@@ -22,18 +22,18 @@ http {
 
         # Serve / folder properly
         location / {
-            alias /var/www/html/;
+            alias /opt/nginx/html/;
             try_files $uri $uri/ //index.php?$query_string;
         }
 
         # Serve static files for //dist/ and //plugins/
         location //dist/ {
-            alias /var/www/html//dist/;
+            alias /opt/nginx/html//dist/;
             try_files $uri $uri/ =404;
         }
 
         location //plugins/ {
-            alias /var/www/html//plugins/;
+            alias /opt/nginx/html//plugins/;
             try_files $uri $uri/ =404;
         }
 
